--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "requirejs": "^2.3.6",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
