--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-hash-link": "^1.0.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "requirejs": "^2.3.6",
