--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bioluniel-smoothscroll",
   "version": "0.1.0",
   "engines": {
-    "node": "^14.18.1"
+    "node": "14.x"
   },
   "private": true,
   "dependencies": {
