--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "sweetalert2": "^11.1.10",
     "web-vitals": "^1.1.2"
   },
+  "engines": {
+    "node": "14.18.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
