--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "web-vitals": "^1.1.2"
   },
   "engines": {
-    "node": "14.18.x"
+    "node": "14.18.1",
+    "npm": "8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
